Adopt NES Spring Kafka dependencies
Switch Spring Kafka dependency management to NES coordinates, restore Kafka smoke coverage in make test, and archive the related OpenSpec changes.